Source/WebCore/accessibility/AccessibilityObject.cpp
@@ -2196,17 +2196,6 @@ void AccessibilityObject::ariaTreeRows(AccessibilityChildrenVector& rows)
     ariaTreeRows(rows, ancestors);
 }
     
-AXCoreObject::AccessibilityChildrenVector AccessibilityObject::ariaTreeItemContent()
-{
-    AccessibilityChildrenVector result;
-    // The content of a treeitem excludes other treeitems or their containing groups.
-    for (const auto& child : children()) {
-        if (!child->isGroup() && child->roleValue() != AccessibilityRole::TreeItem)
-            result.append(child);
-    }
-    return result;
-}
-
 AXCoreObject::AccessibilityChildrenVector AccessibilityObject::disclosedRows()
 {
     AccessibilityChildrenVector result;
